# Clementine

./: Brewfile  CMakeLists.txt  build-win.sh
.github/workflows/: all.yml
cmake/: OptionalSource.cmake
data/: data.qrc  upnp.qrc
ext/clementine-spotifyblob/: CMakeLists.txt
ext/clementine-tagreader/: CMakeLists.txt
ext/libclementine-common/: CMakeLists.txt
ext/libclementine-common/core/: closure.h
ext/libclementine-plugin/: CMakeLists.txt
ext/libclementine-plugin/base/: servicebase.cpp  servicebase.h
ext/libclementine-plugin/common/: pluginbase.cpp  pluginbase.h  settingsbase.h
ext/libclementine-plugin/interfaces/: component.h  player.h  service.h  settings.h
ext/libclementine-plugin/plugin-host/: init.cpp  init.h
ext/libclementine-plugin/plugins/: CMakeLists.txt  init_static_plugins.cpp
ext/libclementine-plugin/plugins/example/: CMakeLists.txt  example.cpp  example.h  exampleplayer.cpp  exampleplayer.h  examplesettings.cpp  examplesettings.h  examplesettingspage.cpp  examplesettingspage.h  examplesettingspage.ui
ext/libclementine-plugin/plugins/telnet/: CMakeLists.txt  player.cpp  player.h  service.cpp  service.h
ext/libclementine-remote/: CMakeLists.txt
ext/libclementine-spotifyblob/: CMakeLists.txt
ext/libclementine-tagreader/: CMakeLists.txt
include/: clementine-config.h.in
plugins/upnp/: CMakeLists.txt
plugins/upnp/interface/: CMakeLists.txt  upnpmanager.h  upnpplugin.h
plugins/upnp/plugin/: CMakeLists.txt
plugins/upnp/plugin/core/: scpdbuilder.cpp  scpdbuilder.h  scpdparser.cpp  scpdparser.h  upnpaction.cpp  upnpaction.h  upnpevents.cpp  upnpevents.h  upnpmanager.cpp  upnpmanager.h  upnproot.cpp  upnproot.h  upnpserver.cpp  upnpserver.h  upnpservice.cpp  upnpservice.h
plugins/upnp/plugin/resources/: upnp.qrc
plugins/upnp/plugin/services/: avtransport.cpp  avtransport.h  connectionmanager.cpp  connectionmanager.h  renderingcontrol.cpp  renderingcontrol.h
src/: CMakeLists.txt  config.h.in  main.cpp
src/core/: application.cpp  application.h  globalshortcuts.cpp  globalshortcuts.h  metatypes.cpp  player.cpp  song.cpp  song.h  utilities.cpp  utilities.h
src/devices/: cddadevice.cpp  connecteddevice.cpp  connecteddevice.h  devicebrowser.cpp  devicebrowser.h  devicebrowser.ui  deviceconnect.cpp  deviceconnect.h  deviceconnect.ui  devicemanager.cpp  devicemanager.h  deviceproperties.cpp  deviceproperties.h  deviceproperties.ui  deviceview.cpp  deviceview.h  filesystemdevice.cpp  filesystemdevice.h  giolister.cpp  mtpdevice.cpp  mtploader.cpp  upnpclient.cpp  upnpclient.h  upnpdevice.cpp  upnpdevice.h  upnpdeviceinfo.cpp  upnpdeviceinfo.h  upnpdoc.h  upnplister.cpp  upnplister.h  upnpserviceinfo.cpp  upnpserviceinfo.h
src/engines/: enginebase.cpp  enginebase.h  gstengine.cpp  gstengine.h  gstenginepipeline.cpp  gstenginepipeline.h  playbackrequest.h
src/internet/core/: cloudfileservice.cpp  cloudfileservice.h  internetmodel.cpp  internetmodel.h  internetservice.h  internetviewcontainer.cpp  internetviewcontainer.h
src/internet/digitally/: digitallyimportedservicebase.cpp  digitallyimportedservicebase.h
src/internet/icecast/: icecastservice.cpp  icecastservice.h
src/internet/intergalacticfm/: intergalacticfmservice.cpp  intergalacticfmservice.h
src/internet/internetarchive/: iacollection.cpp  iacollection.h  iamodel.cpp  iamodel.h  iaquery.cpp  iaquery.h  iaservice.cpp  iaservice.h
src/internet/internetradio/: savedradio.cpp  savedradio.h
src/internet/jamendo/: jamendoservice.cpp  jamendoservice.h
src/internet/magnatune/: magnatuneservice.cpp  magnatuneservice.h
src/internet/podcasts/: podcastservice.cpp  podcastservice.h
src/internet/somafm/: somafmservice.cpp  somafmservice.h
src/internet/spotify/: spotifyservice.cpp  spotifyservice.h
src/internet/subsonic/: subsonicservice.cpp  subsonicservice.h
src/playlistparsers/: asxiniparser.cpp  asxiniparser.h  asxparser.cpp  asxparser.h  cueparser.cpp  cueparser.h  m3uparser.cpp  m3uparser.h  parserbase.h  plaintextparser.cpp  plaintextparser.h  playlistparser.cpp  plsparser.cpp  plsparser.h  wplparser.cpp  wplparser.h  xspfparser.cpp  xspfparser.h
src/plugin/: plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  pluginmanagersettingspage.cpp  pluginmanagersettingspage.h  pluginmanagersettingspage.ui  pluginsettingscategory.cpp  pluginsettingscategory.h  pluginsettingspage.cpp  pluginsettingspage.h
src/ui/: globalshortcutssettingspage.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
src/upnp/: scpdbuilder.cpp  scpdbuilder.h  scpdparser.cpp  scpdparser.h  upnpclient.cpp  upnpclient.h  upnpdatatypes.h  upnpdesc.cpp  upnpdesc.h  upnpevents.cpp  upnpevents.h  upnpmanager.cpp  upnpmanager.h  upnppriv.cpp  upnppriv.h  upnproot.cpp  upnproot.h  upnpserver.cpp  upnpserver.h  upnpservice.cpp  upnpservice.h  upnpview.cpp  upnpview.h  upnpviewcontainer.cpp  upnpviewcontainer.h  upnpviewcontainer.ui  upnpwrappers.cpp  upnpwrappers.h
src/upnp/services/: avtransport.cpp  avtransport.h
